# flagd-ui

./: .claudeignore  .dockerignore  .gitignore  Cargo.toml  DELIVERABLES.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  build.rs  docker-compose.yaml  flagd-ui.code-workspace  package-lock.json  package.json  playwright.config.ts  zensical.toml
.claude/: context.md
.devcontainer/: devcontainer.json
.github/workflows/: docker-image.yml  docs.yml  playwright.yml  rust-backend-checks.yml
docs/: IMPLEMENTATION_SUMMARY.md  README.md  architecture-diagram.md  azure-storage.md  development.md  index.md  multi-environment-implementation-plan.md  multi-environment-options-summary.md  multi-environment-quick-start.md
docs/examples/: docker-compose.yaml  index.md
e2e-tests/: basic.spec.ts  docs-screenshot.spec.ts  sidebar-overflow.spec.ts
flags/: README.md  demo.flagd.json  multi-environment-example.flagd.json
public/: index.html
schema/: targeting.json
services/authentication/: Dockerfile  README.md  get_token.rest  setup.sh
services/azurite/: Dockerfile  README.md  init.sh
services/azurite-init/: Dockerfile  README.md  init.sh
services/azurite/azurite-store/: AzuriteConfig
src/: config.rs  error.rs  main.rs  openapi_doc.rs
src/handlers/: health.rs  mod.rs
src/handlers/api/: flags.rs  mod.rs  placeholder.rs
src/middleware/: mod.rs
src/storage/: azure.rs  local.rs  mod.rs
ui/: .gitignore  .openapi-generator-ignore  .prettierignore  README.md  angular.json  package-lock.json  package.json  playwright.config.ts
ui/src/: index.html  material-theme.scss  styles.css  styles.scss
ui/src/app/: app.config.ts  app.css  app.html  app.routes.ts  app.scss  app.spec.ts  app.ts
ui/src/app/components/environment-manager/: environment-manager.html  environment-manager.scss  environment-manager.ts
ui/src/app/components/flag-card/: flag-card.css  flag-card.html  flag-card.ts
ui/src/app/components/flag-editor/: flag-editor.css  flag-editor.html  flag-editor.scss  flag-editor.ts
ui/src/app/components/metadata-editor/: metadata-editor.html  metadata-editor.scss  metadata-editor.ts
ui/src/app/components/project-detail/: project-detail.ts  (+3 more)
ui/src/app/interceptors/: global-loading.interceptor.ts
ui/src/app/models/: flag.models.ts
ui/src/app/services/: backend-registry.ts  flag-store.ts  global-loading.service.ts  local-store.ts  remote-api.ts
(+26 files in other folders)
