[package]
name = "flagd-ui"
version = "0.1.0"
edition = "2021"
rust-version = "1.93"

[features]
build-script = []

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "compression-gzip", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonschema = "0.26"
utoipa = { version = "5.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8.1", features = ["axum"] }
clap = { version = "4.5", features = ["derive", "env"] }
azure_storage = "0.20"
azure_storage_blobs = "0.20"
azure_core = "0.20"
async-trait = "0.1"
futures = "0.3"

[build-dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonschema = "0.26"
utoipa = { version = "5.3", features = ["axum_extras"] }
tracing = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
azure_storage = "0.20"
azure_storage_blobs = "0.20"
azure_core = "0.20"
async-trait = "0.1"
futures = "0.3"
